--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,10 @@
 {
-  "api": "https://spott-cms-rest-tst.appiness.mobi/rest/v001",
+  "urls": {
+    "api": "https://spott-cms-rest-tst.appiness.mobi/rest/",
+    "apptvateWebsite": "http://localhost:3003/",
+    "cms": "http://localhost:3000/",
+    "cmsNext": "http://localhost:3002/",
+    "tagger": "http://localhost:3001/"
+  },
   "environment": "Testing"
 }
