--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-import": "^1.0.0-beta.0",
     "eslint-plugin-react": "^4.0.0",
+    "estraverse-fb": "^1.3.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "google-maps": "^3.2.1",
