--- a/config.uat.json
+++ b/config.uat.json
@@ -1,6 +1,6 @@
 {
   "urls": {
-    "api": "https://spott-cms-rest-uat.appiness.mobi/rest/",
+    "api": "https://spott-cms-rest-uat.appiness.mobi/rest",
     "apptvateWebsite": "http://uat.apptvate.com",
     "cms": "http://spott-cms-uat.appiness.mobi",
     "cmsNext": "http://spott-cms-uat.appiness.mobi/cms-next",
