--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-node_modules/
 .DS_Store
+node_modules/
 npm-debug.log
 dist/
+
+.idea/
+*.zip
+*.rar
+.vscode
+.project
+.classpath
+.settings
+pom.xml.versionsBackup
+release.properties
+target
+node
