--- a/aws/ebextensions/templates/website/config.prd.json
+++ b/aws/ebextensions/templates/website/config.prd.json
@@ -1,8 +1,10 @@
 {
-  "facebookAppId": "418487828343937",
   "urls": {
-    "api": "https://spott-ios-rest-prd.appiness.mobi/rest",
-    "cmsApi": "https://spott-cms-rest-prd.appiness.mobi/rest"
+    "api": "https://spott-cms-rest-prd.appiness.mobi/rest",
+    "apptvateWebsite": "http://apptvate.com",
+    "cms": "http://spott-cms-prd.appiness.mobi",
+    "cmsNext": "http://spott-cms-prd.appiness.mobi/cms-next",
+    "tagger": "http://spott-cms-prd.appiness.mobi/tagger"
   },
-  "environment": "prd"
+  "environment": "Production"
 }
