--- a/package.json
+++ b/package.json
@@ -24,66 +24,66 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "6.6.0",
-    "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-eslint": "6.1.2",
+    "babel-loader": "6.2.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-runtime": "6.4.3",
     "babel-polyfill": "6.6.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
-    "babel-preset-react-hmre": "^1.1.0",
+    "babel-preset-react-hmre": "1.1.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-runtime": "6.6.0",
-    "chai": "^3.4.1",
-    "chai-immutable": "^1.5.3",
-    "copy-webpack-plugin": "^1.1.1",
-    "counterpart": "^0.17.5",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.2.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-babel": "^3.1.0",
-    "eslint-plugin-import": "^1.0.0-beta.0",
-    "eslint-plugin-react": "^4.0.0",
-    "estraverse-fb": "^1.3.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "google-maps": "^3.2.1",
-    "html-webpack-plugin": "^2.9.0",
-    "httpinvoke": "^1.4.0",
-    "immutable": "^3.7.6",
-    "jsdom": "^8.0.4",
-    "json-loader": "^0.5.4",
-    "mocha": "^2.3.4",
-    "normalizr": "^2.0.0",
-    "radium": "^0.16.2",
-    "radium-grid": "^1.0.7",
+    "chai": "3.4.1",
+    "chai-immutable": "1.5.3",
+    "copy-webpack-plugin": "1.1.1",
+    "counterpart": "0.17.5",
+    "css-loader": "0.23.1",
+    "eslint": "3.4.0",
+    "eslint-loader": "1.5.0",
+    "eslint-plugin-babel": "3.3.0",
+    "eslint-plugin-import": "1.14.0",
+    "eslint-plugin-react": "6.2.0",
+    "estraverse-fb": "1.3.1",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "google-maps": "3.2.1",
+    "html-webpack-plugin": "2.9.0",
+    "httpinvoke": "1.4.0",
+    "immutable": "3.8.1",
+    "jsdom": "8.0.4",
+    "json-loader": "0.5.4",
+    "mocha": "2.3.4",
+    "normalizr": "2.0.0",
+    "radium": "0.16.2",
+    "radium-grid": "1.0.7",
     "react": "0.14.7",
     "react-addons-shallow-compare": "0.14.7",
     "react-addons-test-utils": "0.14.7",
     "react-dom": "0.14.7",
-    "react-dropzone": "^3.3.2",
-    "react-hot-loader": "^1.3.0",
-    "react-immutable-proptypes": "^1.5.1",
-    "react-modal": "^0.6.1",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
-    "react-scroll": "^1.0.3",
-    "react-slick": "^0.11.0",
-    "react-string-replace": "^0.3.2",
-    "redux": "^3.0.5",
-    "redux-combine-actions": "^0.1.2",
-    "redux-form": "^6.0.1",
+    "react-dropzone": "3.3.2",
+    "react-hot-loader": "1.3.0",
+    "react-immutable-proptypes": "2.1.0",
+    "react-modal": "0.6.1",
+    "react-redux": "4.4.0",
+    "react-router": "2.0.0",
+    "react-router-redux": "4.0.0",
+    "react-scroll": "1.0.3",
+    "react-slick": "0.11.0",
+    "react-string-replace": "0.3.2",
+    "redux": "3.0.5",
+    "redux-combine-actions": "0.1.2",
+    "redux-form": "6.0.1",
     "redux-immutablejs": "0.0.8",
-    "redux-logger": "^2.3.2",
+    "redux-logger": "2.3.2",
     "redux-mock-store": "0.0.6",
-    "redux-thunk": "^1.0.3",
-    "reselect": "^2.0.2",
-    "source-map-support": "^0.4.0",
-    "strip-loader": "^0.1.1",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.6.4"
+    "redux-thunk": "1.0.3",
+    "reselect": "2.0.2",
+    "source-map-support": "0.4.0",
+    "strip-loader": "0.1.1",
+    "style-loader": "0.13.0",
+    "webpack": "1.12.11",
+    "webpack-dev-server": "1.14.1",
+    "webpack-hot-middleware": "2.6.4"
   }
 }
