--- a/package.json
+++ b/package.json
@@ -71,19 +71,19 @@
     "react-scroll": "1.0.3",
     "react-slick": "0.11.0",
     "react-string-replace": "0.3.2",
-    "redux": "3.0.5",
+    "redux": "^3.6.0",
     "redux-combine-actions": "0.1.2",
-    "redux-form": "6.0.1",
+    "redux-form": "^6.0.2",
     "redux-immutablejs": "0.0.8",
-    "redux-logger": "2.3.2",
-    "redux-mock-store": "0.0.6",
-    "redux-thunk": "1.0.3",
-    "reselect": "2.0.2",
-    "source-map-support": "0.4.0",
-    "strip-loader": "0.1.1",
-    "style-loader": "0.13.0",
-    "webpack": "1.12.11",
-    "webpack-dev-server": "1.14.1",
-    "webpack-hot-middleware": "2.6.4"
+    "redux-logger": "^2.6.1",
+    "redux-mock-store": "^1.2.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.3",
+    "source-map-support": "^0.4.2",
+    "strip-loader": "^0.1.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1",
+    "webpack-hot-middleware": "^2.12.2"
   }
 }
