--- a/package.json
+++ b/package.json
@@ -57,33 +57,33 @@
     "normalizr": "2.2.1",
     "radium": "0.18.1",
     "radium-grid": "2.0.1",
-    "react": "0.14.7",
-    "react-addons-shallow-compare": "0.14.7",
-    "react-addons-test-utils": "0.14.7",
-    "react-dom": "0.14.7",
-    "react-dropzone": "3.3.2",
+    "react": "15.3.1",
+    "react-addons-shallow-compare": "15.3.1",
+    "react-addons-test-utils": "15.3.1",
+    "react-dom": "15.3.1",
+    "react-dropzone": "3.6.0",
     "react-hot-loader": "1.3.0",
     "react-immutable-proptypes": "2.1.0",
-    "react-modal": "0.6.1",
-    "react-redux": "4.4.0",
-    "react-router": "2.0.0",
-    "react-router-redux": "4.0.0",
-    "react-scroll": "1.0.3",
-    "react-slick": "0.11.0",
+    "react-modal": "1.4.0",
+    "react-redux": "4.4.5",
+    "react-router": "^2.7.0",
+    "react-router-redux": "^4.0.5",
+    "react-scroll": "^1.3.1",
+    "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
-    "redux": "^3.6.0",
+    "redux": "3.6.0",
     "redux-combine-actions": "0.1.2",
-    "redux-form": "^6.0.2",
+    "redux-form": "6.0.2",
     "redux-immutablejs": "0.0.8",
-    "redux-logger": "^2.6.1",
-    "redux-mock-store": "^1.2.0",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.3",
-    "source-map-support": "^0.4.2",
-    "strip-loader": "^0.1.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "redux-logger": "2.6.1",
+    "redux-mock-store": "1.2.0",
+    "redux-thunk": "2.1.0",
+    "reselect": "2.5.3",
+    "source-map-support": "0.4.2",
+    "strip-loader": "0.1.2",
+    "style-loader": "0.13.1",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.15.1",
+    "webpack-hot-middleware": "2.12.2"
   }
 }
