--- a/package.json
+++ b/package.json
@@ -57,13 +57,15 @@
     "jsdom": "9.5.0",
     "json-loader": "0.5.4",
     "mocha": "3.0.2",
-    "moment": "^2.15.0",
+    "moment": "2.11.0",
     "normalizr": "2.2.1",
     "radium": "0.18.1",
     "radium-grid": "2.0.1",
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
+    "react-date-range": "^0.2.4",
+    "react-dates": "^3.0.0",
     "react-dom": "15.3.1",
     "react-dropzone": "3.6.0",
     "react-highcharts": "^10.0.0",
