--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "UNLICENSED",
   "dependencies": {},
   "devDependencies": {
-    "aws-sdk": "^2.6.0",
+    "aws-sdk": "2.6.0",
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
@@ -49,8 +49,8 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "google-maps": "3.2.1",
-    "highcharts-exporting": "^0.1.2",
-    "highcharts-more": "^0.1.2",
+    "highcharts-exporting": "0.1.2",
+    "highcharts-more": "0.1.2",
     "html-webpack-plugin": "2.22.0",
     "httpinvoke": "1.4.0",
     "immutable": "3.8.1",
@@ -64,18 +64,18 @@
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
-    "react-date-range": "^0.2.4",
-    "react-dates": "^3.0.0",
+    "react-date-range": "0.2.4",
+    "react-dates": "3.0.0",
     "react-dom": "15.3.1",
     "react-dropzone": "3.6.0",
-    "react-highcharts": "^10.0.0",
+    "react-highcharts": "10.0.0",
     "react-hot-loader": "1.3.0",
     "react-immutable-proptypes": "2.1.0",
     "react-modal": "1.4.0",
     "react-redux": "4.4.5",
-    "react-router": "^2.7.0",
-    "react-router-redux": "^4.0.5",
-    "react-scroll": "^1.3.1",
+    "react-router": "2.7.0",
+    "react-router-redux": "4.0.5",
+    "react-scroll": "1.3.1",
     "react-select": "1.0.0-beta11",
     "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
