--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "normalizr": "2.2.1",
     "radium": "0.18.1",
     "radium-grid": "2.0.1",
+    "rc-time-picker": "^2.0.2",
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
