--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
   },
   "private": true,
   "license": "UNLICENSED",
-  "dependencies": {
-    "react-simple-dropdown": "^1.1.4"
-  },
   "devDependencies": {
     "aws-sdk": "2.6.0",
     "babel-core": "6.14.0",
@@ -63,7 +60,7 @@
     "normalizr": "2.2.1",
     "radium": "0.18.1",
     "radium-grid": "2.0.1",
-    "rc-time-picker": "^2.0.2",
+    "rc-time-picker": "2.0.2",
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
@@ -78,7 +75,8 @@
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "react-scroll": "1.3.1",
-    "react-select": "1.0.0-beta11",
+    "react-select": "1.0.0-rc.2",
+    "react-simple-dropdown": "1.1.4",
     "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
     "redux": "3.6.0",
