--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-simple-dropdown": "1.1.4",
     "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
+    "react-tabs": "0.8.2",
     "redux": "3.6.0",
     "redux-combine-actions": "0.1.2",
     "redux-form": "6.1.1",
