--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
-    "react-date-range": "0.2.4",
+    "react-datepicker": "0.32.0",
     "react-dom": "15.3.1",
     "react-dropzone": "3.6.0",
     "react-highcharts": "10.0.0",
