* Initialize testing environment * Info, hint and error pop-ups. * Moving code to the right file (styling headers to table file)

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,9 +7,13 @@
     "import"
   ],
   "env": {
+    "mocha": true,
     "browser": true,
     "node": true,
     "es6": true
+  },
+  "globals": {
+    "expect": true
   },
   "ecmaFeatures": {
     "arrowFunctions": true,
