--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://bitbucket.org/appiness/apptvate.website.git",
   "contributors": [
     {
-      "name": "Arvid De Meyer"
+      "name": "Bart Van Miegem"
     },
     {
       "name": "Kristof Van Miegem"
@@ -15,7 +15,7 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "test": "NODE_ENV=testing ./node_modules/mocha/bin/mocha --timeout 10000 --require ./test/_init.js \"test/**/*.test.js\"",
+    "test": "NODE_ENV=testing ./node_modules/karma/bin/karma start --auto-watch --no-single-run karma.conf.js",
     "build": "rm -rf ./dist/* && NODE_ENV=production ./node_modules/webpack/bin/webpack.js --config webpack.prod.config.babel.js",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.config.babel.js"
   },
@@ -39,6 +39,7 @@
     "copy-webpack-plugin": "3.0.1",
     "counterpart": "0.17.5",
     "css-loader": "0.25.0",
+    "enzyme": "2.4.1",
     "eslint": "3.4.0",
     "eslint-loader": "1.5.0",
     "eslint-plugin-babel": "3.3.0",
@@ -53,11 +54,22 @@
     "html-webpack-plugin": "2.22.0",
     "httpinvoke": "1.4.0",
     "immutable": "3.8.1",
+    "jasmine-core": "^2.5.2",
     "jsdom": "9.5.0",
     "json-loader": "0.5.4",
+    "karma": "1.3.0",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-mocha": "1.2.0",
+    "karma-mocha-reporter": "2.2.0",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
     "mocha": "3.0.2",
     "moment": "2.11.0",
     "normalizr": "2.2.1",
+    "phantomjs-prebuilt": "2.1.13",
     "radium": "0.18.1",
     "radium-grid": "2.0.1",
     "rc-time-picker": "2.0.2",
