--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "react-highcharts": "10.0.0",
     "react-hot-loader": "1.3.0",
     "react-immutable-proptypes": "2.1.0",
-    "react-infinite": "^0.10.0",
+    "react-infinite": "0.10.0",
     "react-modal": "1.4.0",
     "react-redux": "4.4.5",
     "react-router": "2.7.0",
