--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-scroll": "1.3.1",
     "react-select": "1.0.0-rc.2",
     "react-simple-dropdown": "1.1.4",
+    "react-simpletabs": "^0.7.0",
     "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
     "react-tabs": "0.8.2",
