--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "react-scroll": "1.3.1",
-    "react-select": "1.0.0-rc.2",
+    "react-select": "https://github.com/JedWatson/react-select.git#ad337eefec23987a28cb6994940353999bb4a5ea",
     "react-simple-dropdown": "1.1.4",
     "react-simpletabs": "0.7.0",
     "react-slick": "0.14.1",
