--- a/.eslintrc
+++ b/.eslintrc
@@ -270,8 +270,7 @@
         'render'
       ]
     }],
-    "react/wrap-multilines": 2,
-
+    "react/jsx-wrap-multilines": 2,
     "import/no-unresolved": 2,
     "import/named": 2,
     "import/default": 2,
