--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
+    "react-colors-picker": "^2.3.1",
     "react-datepicker": "0.32.0",
     "react-dom": "15.3.1",
     "react-dropzone": "3.6.0",
