--- a/package.json
+++ b/package.json
@@ -16,37 +16,37 @@
   },
   "scripts": {
     "test": "NODE_ENV=testing ./node_modules/karma/bin/karma start --auto-watch --no-single-run karma.conf.js",
-    "build": "rm -rf ./dist/* && NODE_ENV=production ./node_modules/webpack/bin/webpack.js --config webpack.prod.config.babel.js",
-    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.dev.config.babel.js"
+    "build": "rm -rf ./dist/* && NODE_ENV=production ./node_modules/webpack/bin/webpack.js --progress --config webpack.prod.config.babel.js",
+    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --config webpack.dev.config.babel.js"
   },
   "private": true,
   "license": "UNLICENSED",
   "devDependencies": {
     "aws-sdk": "2.6.0",
-    "babel-core": "6.14.0",
-    "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.5",
+    "babel-core": "6.20.0",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "6.2.10",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-polyfill": "6.13.0",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-react": "6.11.1",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
     "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-runtime": "6.11.6",
+    "babel-preset-stage-0": "6.16.0",
+    "babel-runtime": "6.18.0",
     "chai": "3.5.0",
     "chai-immutable": "1.6.0",
     "copy-webpack-plugin": "4.0.1",
     "counterpart": "0.17.5",
-    "css-loader": "0.25.0",
+    "css-loader": "0.26.1",
     "enzyme": "2.4.1",
     "eslint": "3.4.0",
-    "eslint-loader": "1.5.0",
+    "eslint-loader": "1.6.1",
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-import": "1.14.0",
     "eslint-plugin-react": "6.2.0",
     "estraverse-fb": "1.3.1",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "0.9.0",
     "google-maps": "3.2.1",
     "highcharts-exporting": "0.1.2",
@@ -112,8 +112,7 @@
     "source-map-support": "0.4.2",
     "strip-loader": "0.1.2",
     "style-loader": "0.13.1",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.15.1",
-    "webpack-hot-middleware": "2.13.2"
+    "webpack": "2.2.0-rc.0",
+    "webpack-dev-server": "2.1.0-beta.12"
   }
 }
