--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
-    "react-contextmenu": "0.3.0",
     "react-colors-picker": "2.3.1",
+    "react-contextmenu": "0.3.0",
     "react-datepicker": "0.32.0",
     "react-dnd": "2.1.4",
     "react-dnd-html5-backend": "2.1.2",
@@ -91,6 +91,7 @@
     "react-immutable-proptypes": "2.1.0",
     "react-infinite": "0.10.0",
     "react-modal": "1.4.0",
+    "react-onclickoutside": "5.8.3",
     "react-redux": "4.4.5",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
