--- a/modules/docker/modules/nginx/docker/Dockerfile
+++ b/modules/docker/modules/nginx/docker/Dockerfile
@@ -2,7 +2,10 @@ FROM ${appiness.docker.registry}/nginx:${appiness.docker.nginx.version}
 
 MAINTAINER Appiness (didier.deschepper@appiness.mobi)
 
-ADD /files/etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+ADD /files/var/lib/appiness /var/lib/appiness
 ADD /files/docroot /var/www/html
+
+RUN ln -s /var/lib/appiness/nginx/external.conf.d /etc/nginx/external.conf.d
+RUN ln -s /var/lib/appiness/website/config /var/www/html/config
 
 CMD ["nginx"]
