--- a/aws/ebextensions/030_website.config
+++ b/aws/ebextensions/030_website.config
@@ -2,8 +2,8 @@ container_commands:
   01-clean:
     command: rm -rf /var/www/website
   02-copy:
-    command: mkdir -p /var/www/website
+    command: mkdir -p /var/www/website/config
   03-copy:
     command: cp -r .ebextensions/files/website/* /var/www/website
   04-config:
-    command: cp -r .ebextensions/templates/website/config.${environment}.json /var/www/website/config.json
+    command: cp -r .ebextensions/templates/website/config.${environment}.json /var/www/website/config/config.json
