--- a/.eslintrc
+++ b/.eslintrc
@@ -120,7 +120,7 @@
     "no-self-compare": 1,
     "no-sequences": 2,
     "no-throw-literal": 1,
-    "no-unused-expressions": 0,
+    "no-unused-expressions": [1, { "allowShortCircuit": true, "allowTernary": true }],
     "no-useless-call": 1,
     "no-useless-concat": 1,
     "no-void": 1,
