--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-react": "6.8.0",
     "estraverse-fb": "1.3.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "google-maps": "3.2.1",
     "highcharts-exporting": "0.1.2",
