--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react": "15.3.1",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
+    "react-autosuggest": "^8.0.0",
     "react-colors-picker": "2.3.1",
     "react-contextmenu": "0.3.0",
     "react-datepicker": "0.32.0",
