exclude configuration from container

--- a/modules/docker/modules/nginx/pom.xml
+++ b/modules/docker/modules/nginx/pom.xml
@@ -55,6 +55,9 @@
 				<includes>
 					<include>**/*</include>
 				</includes>
+                <excludes>
+                    <exclude>config/**</exclude>
+                </excludes>
 			</resource>
 		</resources>
 		<plugins>
