added noCache to image build

--- a/modules/docker/modules/nginx/pom.xml
+++ b/modules/docker/modules/nginx/pom.xml
@@ -55,9 +55,9 @@
 				<includes>
 					<include>**/*</include>
 				</includes>
-                <excludes>
-                    <exclude>config/**</exclude>
-                </excludes>
+				<excludes>
+					<exclude>config/**</exclude>
+				</excludes>
 			</resource>
 		</resources>
 		<plugins>
@@ -83,6 +83,7 @@
 					<serverId>appiness</serverId>
 					<registryUrl>${appiness.docker.registry.url}</registryUrl>
 					<forceTags>true</forceTags>
+					<noCache>true</noCache>
 					<imageTags>
 						<imageTag>${project.version}</imageTag>
 						<imageTag>latest</imageTag>
