--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "react-dnd-html5-backend": "2.1.2",
     "react-dom": "15.3.1",
     "react-dropzone": "3.6.0",
-    "react-google-maps": "^4.11.0",
+    "react-google-maps": "6.0.1",
     "react-highcharts": "10.0.0",
     "react-hot-loader": "1.3.0",
     "react-hotkeys": "0.9.0",
