--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
     "react-tabs": "0.8.2",
+    "react-toggle": "^3.0.1",
     "react-typeahead": "1.1.5",
     "redux": "3.6.0",
     "redux-combine-actions": "0.1.2",
