--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-highcharts": "10.0.0",
     "react-hot-loader": "1.3.0",
     "react-hotkeys": "0.9.0",
+    "react-image-crop": "^2.0.3",
     "react-immutable-proptypes": "2.1.0",
     "react-infinite": "0.10.0",
     "react-modal": "1.4.0",
