--- a/package.json
+++ b/package.json
@@ -72,11 +72,12 @@
     "nouislider": "8.2.1",
     "perfect-scrollbar": "0.6.8",
     "phantomjs-prebuilt": "2.1.13",
-    "radium": "0.18.1",
+    "prop-types": "15.5.8",
+    "radium": "0.18.2",
     "radium-grid": "2.0.1",
     "rc-time-picker": "2.0.2",
     "rc-tooltip": "3.4.2",
-    "react": "15.3.1",
+    "react": "15.5.0",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
     "react-autosuggest": "^8.0.0",
@@ -85,7 +86,7 @@
     "react-datepicker": "0.32.0",
     "react-dnd": "2.1.4",
     "react-dnd-html5-backend": "2.1.2",
-    "react-dom": "15.3.1",
+    "react-dom": "15.5.4",
     "react-dropzone": "3.6.0",
     "react-highcharts": "10.0.0",
     "react-hot-loader": "1.3.0",
@@ -108,7 +109,6 @@
     "react-toggle": "^3.0.1",
     "react-typeahead": "1.1.5",
     "redux": "3.6.0",
-    "redux-combine-actions": "0.1.2",
     "redux-form": "6.1.1",
     "redux-immutablejs": "0.0.8",
     "redux-logger": "2.6.1",
