--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 	<artifactId>apptvate.website</artifactId>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
-	<version>01.00.18</version>
+	<version>01.00.19-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:https://bitbucket.org/appiness/apptvate.website</connection>
-		<tag>apptvate.website-01.00.18</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<repositories>
 		<repository>
