--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "google-maps": "3.2.1",
+    "highcharts-export-csv": "^1.4.6",
     "highcharts-exporting": "0.1.2",
     "highcharts-more": "0.1.2",
     "html-webpack-plugin": "2.24.1",
@@ -70,7 +71,7 @@
     "moment": "2.11.0",
     "normalizr": "2.2.1",
     "nouislider": "8.2.1",
-    "papaparse": "^4.1.4",
+    "papaparse": "^4.3.2",
     "perfect-scrollbar": "0.6.8",
     "phantomjs-prebuilt": "2.1.13",
     "prop-types": "15.5.8",
@@ -103,7 +104,7 @@
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "react-scroll": "1.3.1",
-    "react-select": "https://github.com/JedWatson/react-select.git#ad337eefec23987a28cb6994940353999bb4a5ea",
+    "react-select": "1.0.0-rc.3",
     "react-simple-dropdown": "1.1.4",
     "react-simpletabs": "0.7.0",
     "react-slick": "0.14.1",
