--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "google-maps": "3.2.1",
-    "highcharts-export-csv": "^1.4.6",
+    "highcharts-export-csv": "1.4.5",
     "highcharts-exporting": "0.1.2",
     "highcharts-more": "0.1.2",
     "html-webpack-plugin": "2.24.1",
@@ -71,7 +71,7 @@
     "moment": "2.11.0",
     "normalizr": "2.2.1",
     "nouislider": "8.2.1",
-    "papaparse": "^4.3.2",
+    "papaparse": "4.3.2",
     "perfect-scrollbar": "0.6.8",
     "phantomjs-prebuilt": "2.1.13",
     "prop-types": "15.5.8",
@@ -82,7 +82,7 @@
     "react": "15.5.0",
     "react-addons-shallow-compare": "15.3.1",
     "react-addons-test-utils": "15.3.1",
-    "react-autosuggest": "^8.0.0",
+    "react-autosuggest": "8.0.0",
     "react-colors-picker": "2.3.1",
     "react-contextmenu": "0.3.0",
     "react-datepicker": "0.32.0",
@@ -94,10 +94,10 @@
     "react-highcharts": "10.0.0",
     "react-hot-loader": "1.3.0",
     "react-hotkeys": "0.9.0",
-    "react-image-crop": "^2.0.3",
+    "react-image-crop": "2.0.3",
     "react-immutable-proptypes": "2.1.0",
     "react-infinite": "0.10.0",
-    "react-masonry-component": "^5.0.5",
+    "react-masonry-component": "5.0.5",
     "react-modal": "1.4.0",
     "react-onclickoutside": "5.8.3",
     "react-redux": "4.4.5",
@@ -110,7 +110,7 @@
     "react-slick": "0.14.1",
     "react-string-replace": "0.3.2",
     "react-tabs": "0.8.2",
-    "react-toggle": "^3.0.1",
+    "react-toggle": "3.0.1",
     "react-typeahead": "1.1.5",
     "redux": "3.6.0",
     "redux-form": "6.1.1",
