--- a/modules/docker/pom.xml
+++ b/modules/docker/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>appiness.mobi</groupId>
 		<artifactId>apptvate.website</artifactId>
-		<version>01.00.19</version>
+		<version>01.00.20-SNAPSHOT</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<artifactId>apptvate.website.docker</artifactId>
